# django-scheduled-tasks

./: .gitignore  LICENSE  README.md  generate_migrations.py  run_tests.py  setup.cfg
.github/workflows/: ci-flake8.yml  ci-tests.yml
django_scheduled_tasks/: __init__.py  admin.py  apps.py  models.py  register.py  scheduler.py
django_scheduled_tasks/migrations/: 0001_initial.py  0002_scheduledtask_last_runtime.py  0003_scheduledtask_onstart.py  0004_scheduledtask_exclusive.py  0005_remove_scheduledtask_last_runtime_and_more.py  0005_scheduledtask_day_scheduledtask_hour_and_more.py
django_scheduled_tasks/tests/: __init__.py  test_fake.py  test_models.py  test_register.py  test_schedule_day.py  test_scheduler.py
