[metadata]
name = django_scheduled_tasks
version = 0.1
author = Andrew Edmondson
author_email = a.c.edmondson@bham.ac.uk
description = BEAR Django Scheduled Tasks app
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/bear-rsg/django-scheduled-tasks
project_urls =
    Bug Tracker = https://github.com/bear-rsg/django-scheduled-tasks/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: Linux

[options]
include_package_data = true
packages = django_scheduled_tasks, django_scheduled_tasks.migrations
python_requires = >=3.6
install_requires =
    Django >= 3.2.0
    apscheduler

[options.extras_require]
testing =
    coverage
linting =
    flake8
    flake8-docstrings

[flake8]
exclude=.venv,venv,cache,__pycache__,*migrations*
max-line-length=120

[pep8]
exclude=.venv,venv,cache,__pycache__,*migrations*
max-line-length=120
